--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -8,6 +8,26 @@
     src: url("SuperGroteskPro-Medium.otf");
   }
   @font-face {
-    font-family: "Camela Medium";
-    src: url("Camela-Medium.otf");
+    font-family: "Canela Medium";
+    src: url("Canela-Medium.otf");
+  }
+  @font-face {
+    font-family: "Canela Thin";
+    src: url("Canela-Thin.otf");
+  }
+  @font-face {
+    font-family: "SuperGrotesk Cond Bold";
+    src: url("SuperGroteskPro-Cond-Bold.otf");
+  }
+  @font-face {
+    font-family: "SuperGrotesk Cond Medium";
+    src: url("SuperGroteskPro-Cond-Medium.otf");
+  }
+  @font-face {
+    font-family: "SuperGrotesk Cond";
+    src: url("SuperGroteskPro-Cond.otf");
+  }
+  @font-face {
+    font-family: "SuperGrotesk Bold";
+    src: url("SuperGroteskPro-Bold.otf");
   }
