--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -163,6 +163,7 @@ a {
     border: 10px #686868 solid;
     border-radius: 23%;
     background-color: #686868;
+    padding: 0px;
 }
 
 .toggle_x {
@@ -307,6 +308,80 @@ a {
   width: 960px;
 }
 
+/*Mobile PDF*/
+
+.react-pdf__Document{
+  height: 80vh;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  display: table;
+}
+
+.react-pdf__Page {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+canvas.react-pdf__Page__canvas {
+  height: auto !important;
+  width: auto !important;
+  max-width: 100%;
+  max-height: 80vh;
+  margin: auto;
+}
+
+.react-pdf__Page__textContent {
+  display: none;
+}
+
+.controls {
+  height: 20vh;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  display: table;
+}
+
+.controls button {
+  background-color: transparent;
+  border: 0;
+  font-size: 0;
+  margin: auto !important;
+  height: 20vh;
+}
+
+.controls button:before {
+  content: "↓";
+  font-size: 23px;
+  background-color: transparent;
+  border: 4px solid #fff;
+  color: white;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  margin: auto;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.controls button:first-child:before {
+  -webkit-transform:rotate(90deg);
+  -moz-transform:rotate(90deg);
+  -ms-transform:rotate(90deg);
+  -o-transform:rotate(90deg);
+  transform:rotate(90deg);
+}
+
+.controls button:last-child:before {
+  -webkit-transform:rotate(-90deg);
+  -moz-transform:rotate(-90deg);
+  -ms-transform:rotate(-90deg);
+  -o-transform:rotate(-90deg);
+  transform:rotate(-90deg);
+}
 
 @media screen  and (max-width: 800px) and (orientation : portrait){
   .flex-item {
