--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -389,6 +389,49 @@ canvas.react-pdf__Page__canvas {
   left: 25%;
 }
 
+.pdfGallery {
+  display: flex;
+  flex-wrap: wrap;
+  height: 80vh;
+  width: 90%;
+  max-width: 90%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.pdfGalleryLists {
+  width: 20%;
+  height: 50%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.pdfGalleryThumb {
+  padding: 10px;
+  max-width: 90%;
+  height: 100%;
+  max-height: 20vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.pdfImageBox {
+  width: 130%;
+  top: 50%;
+  right: 50%;
+  -webkit-transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
+  position: absolute;
+}
+
+p.pdfName {
+  margin-top: 11px;
+}
+
 @media screen  and (max-width: 800px) and (orientation : portrait){
   .flex-item {
     flex-wrap: wrap;
@@ -422,6 +465,47 @@ canvas.react-pdf__Page__canvas {
   .pdf-flex-item iframe{
     width: 445px;
   }
+
+  .pdfGallery {
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    width: 100%;
+    max-width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: auto;
+    margin-top: 50px;
+    max-height: 90vh;
+  }
+
+  .pdfGalleryLists {
+    width: 48%;
+    height: 20%;
+    margin-bottom: 10px;
+  }
+
+  .pdfGalleryThumb {
+    padding: 10px;
+    max-width: 100%;
+    height: 84px;
+    max-height: 25vh;
+    width: 150px;
+    position: relative;
+    overflow: hidden;
+  }
+  .pdfImageBox {
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    position: absolute;
+  }
+  p.pdfName {
+    margin-top: 11px;
+    width: 150px;
+  }
 }
 
 @media screen and (max-width: 1024px) and (orientation: landscape) {
@@ -439,22 +523,28 @@ canvas.react-pdf__Page__canvas {
   .pdf-flex-item iframe{
     width: 382px;
   }
+  .pdfGallery {
+    display: flex;
+    flex-wrap: wrap;
+    height: 80vh;
+    width: 90%;
+    max-width: 90%;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: auto;
+  }
+  .pdfGalleryLists {
+    width: 30%;
+    height: 50%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
-.pdfGallery {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 500px;
-  width: 500px;
-  justify-content: space-evenly;
-  align-items: baseline;
-}
 
-.pdfImageBox {
-  width: 150px;
-  height: 150px;
-}
 
 
 /* @media (orientation: portrait) {
