--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -187,9 +187,8 @@ a {
 
 .flex-item {
     display: flex;
-    width: 100%;
     margin: auto;
-    position: relative;
+    position: absolute;
     height: 100vh;
 }
 
