--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -405,10 +405,10 @@ canvas.react-pdf__Page__canvas {
   height: 100vh;
   width: 90%;
   max-width: 90%;
-  -webkit-align-items: center;
+  /* -webkit-align-items: center; */
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+  /* align-items: center; */
   border-top: 60px solid #000;
   overflow: auto;
 }
