feat:adding fonts to web app

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,39 +1,38 @@
 @font-face {
     font-family: "SuperGrotesk Regular";
-    src: url("SuperGroteskPro.otf");
+    src: url("./superGrotesk/SuperGroteskPro.otf");
   }
 
   @font-face {
     font-family: "SuperGroteskPro";
-    src: url("SuperGroteskPro.otf");
+    src: url("./superGrotesk/SuperGroteskPro.otf");
   }
-
 
   @font-face {
     font-family: "SuperGrotesk Medium";
-    src: url("SuperGroteskPro-Medium.otf");
+    src: url("./superGrotesk/SuperGroteskPro-Medium.otf");
   }
   @font-face {
     font-family: "Canela Medium";
-    src: url("Canela-Medium.otf");
+    src: url("./canela/Canela-Medium.otf");
   }
   @font-face {
     font-family: "Canela Thin";
-    src: url("Canela-Thin.otf");
+    src: url("./canela/Canela-Thin.otf");
   }
   @font-face {
     font-family: "SuperGrotesk Cond Bold";
-    src: url("SuperGroteskPro-Cond-Bold.otf");
+    src: url("./superGrotesk/SuperGroteskPro-Cond-Bold.otf");
   }
   @font-face {
     font-family: "SuperGrotesk Cond Medium";
-    src: url("SuperGroteskPro-Cond-Medium.otf");
+    src: url("./superGrotesk/SuperGroteskPro-Cond-Medium.otf");
   }
   @font-face {
     font-family: "SuperGrotesk Cond";
-    src: url("SuperGroteskPro-Cond.otf");
+    src: url("./superGrotesk/SuperGroteskPro-Cond.otf");
   }
   @font-face {
     font-family: "SuperGrotesk Bold";
-    src: url("SuperGroteskPro-Bold.otf");
+    src: url("./superGrotesk/SuperGroteskPro-Bold.otf");
   }
