--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -658,3 +658,18 @@ p.pdfName {
     }
 } */
 
+.paraLogoClassName{
+  margin-top:0cm;
+  margin-right:0cm;
+  margin-bottom:8.0pt;
+  margin-left:0cm;
+  font-size:15px;
+  font-family:"Calibri",
+  sans-serif;
+  text-align:center;
+}
+.spanLogoClassName{
+  
+  color: #FFFFFF;
+}
+
