adding font Avenir

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -52,3 +52,7 @@
     font-family: "Apercu Medium";
     src: url("./apercu/Apercu-Medium.otf");
   }
+  @font-face {
+    font-family: "Avenir";
+    src: url("./avenir/Avenir-Next.ttc");
+  }
