--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -56,3 +56,7 @@
     font-family: "Avenir";
     src: url("./avenir/Avenir-Next.ttc");
   }
+  @font-face {
+    font-family: "Avenir Next";
+    src: url("./avenir/Avenir-Next.ttc");
+  }
