--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -668,6 +668,14 @@ p.pdfName {
   sans-serif;
   text-align:center;
 }
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+  background-color: white;
+}
 .spanLogoClassName{
   
   color: #FFFFFF;
