--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -187,11 +187,12 @@ a {
     display: flex;
     margin: auto;
     position: absolute;
-    height: 100vh;
+    height: 97%;
+    align-items: center;
 }
 
 .controlFlex {
-  display: flex;
+  display: block;
   flex-direction: column;
   width: 50%;
   align-items: center;
@@ -199,6 +200,7 @@ a {
   justify-content: center;
   top: 40%;
   left: 68%;
+  padding: 10% 0;
 }
 .box{
   width: 40%;
@@ -220,10 +222,8 @@ a {
 }
 
 .logoDescContainer{
-  display: flex;
-  flex-direction: column;
   width: 50%;
-  display: flex;
+  display: block;
   flex-direction: column;
   padding: 0 5%;
   justify-content: center;
@@ -495,6 +495,7 @@ p.pdfName {
   }
   .logoDescContainer {
     width: 100%;
+    height: 60vh;
   }
   #LogoDesc .box {
     width: 50%;
@@ -506,10 +507,11 @@ p.pdfName {
   .controlFlex, .imageControlFlex {
     width: 100%;
     display: block;
+    height: 40vh;
   }
   .controlFlex .box {
     display: inline-block;
-    width: 46%;
+    width: 30%;
   }
   .rightContainerFlex .box {
     width: 50%;
