--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -497,6 +497,7 @@ p.pdfName {
   .logoDescContainer {
     width: 100%;
     height: 45vh;
+    display: flex;
   }
   #LogoDesc .box {
     width: 50%;
