font size fixed on ipad

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -490,6 +490,25 @@ p.pdfName {
   height: 240px;
 }
 
+/*iPad*/
+
+@media only screen and (min-device-width: 769px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  #LogoDesc p span {
+    font-size: 200%!important;
+  }
+}
+@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {
+  #LogoDesc p span {
+    font-size: 250%!important;
+  }
+}
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
+  #LogoDesc p span {
+    font-size: 250%!important;
+  }
+}
+/*iPad*/
+
 @media screen  and (max-width: 1024px) and (orientation : portrait){
   .flex-item {
     flex-wrap: wrap;
